--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "^3.27.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-video": "^5.2.1",
-    "react-redux": "^9.0.3"
+    "react-redux": "^9.0.3",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,7 +42,11 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/react-native": "^12.4.3",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-native-video": "^5.0.18",
@@ -49,10 +54,11 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.1",
     "typescript": "4.8.4"
   },
   "engines": {
