--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "nodemon": "^3.0.2",
     "otp-generator": "^4.0.1",
     "sharp": "^0.33.0",
+    "socket.io": "^4.7.4",
     "typescript": "^5.3.2",
     "uuid": "^9.0.1"
   },
