--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-vector-icons": "^10.0.2",
     "react-native-video": "^5.2.1",
     "react-redux": "^9.0.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
