--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/redux-mock-store": "^1.0.6",
     "aws-sdk": "^2.1515.0",
     "axios": "^1.6.2",
     "react": "18.2.0",
@@ -35,6 +36,7 @@
     "react-native-video": "^5.2.1",
     "react-redux": "^9.0.3",
     "redis": "^4.6.13",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.4"
   },
